# Scripts

./: README.md  Utilities.py
C++/: CMakeLists.txt  Main.cpp  Projects.cpp
C++/Matrix/: DispBase.cpp  Main.cpp  Main.h
Euler/: Approximater.py  Display.py  Euler Approximater.py  Euler_Approximater.py  Euler_Display.py  Matrix.py
Games/: Battle_Bots.py
Kaprekar/: Kapraker Table.txt
Python/Euler/: Approximater.py  Display.py
Python/Kaprekar/: Kapraker's Constant.py
Python/Recursion/: Factorial.py
Recursion/: Factorial.py  Fibonacci.py
