# CMakeList.txt : CMake project for Projects, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Projects")

# Add source to this project's executable.
add_executable (Projects "Projects.cpp" "Projects.h")

# TODO: Add tests and install targets if needed.
